--- a/assignment/assignment_knn.ipynb
+++ b/assignment/assignment_knn.ipynb
@@ -19,11 +19,26 @@
    "source": [
     "**Q0.**\n",
     "1. What is the difference between regression and classification?\n",
+    "   * Regression is used for more continuous variables (non-discrete) while classification more so categorizes variables (discrete kinds). Both \"predict\" the outcomes of certain target variables with the input of other variables, but have different methods according to the sentence before.\n",
+    "\n",
     "2. What is a confusion table? What does it help us understand about a model's performance?\n",
-    "3. What does the SSE quantify about a particular model?\n",
+    "   * A confusion table or matrix is a table that shows how well a model may perform, by showing the frequency, probability, or percentage of false positives and false negatives (incorrect predictions) and true positives and true negatives (correct predictions). For a model, it'll help us better understand how well our model can predict outcomes and where we can improve (work on eliminated more false positives than more false negatives, etc.). It can also show us if the model is making a tremendous amount of incorrect predictions, as this might be a concern is high risk scenarios.\n",
+    "        \n",
+    "3.  What does the SSE quantify about a particular model?\n",
+    "   * The SSE or the sum of square errors shows how well a model fits or can predict a dataset. If the SSE is high, then we may understand that the model is not the best fit to a dataset, while a low SSE shows the contrary.\n",
+    "\n",
     "4. What are overfitting and underfitting? \n",
+    "   * Overfitting is when a model is too complicated and is trained highly/closely on the training dataset. Therefore, it'll be able to predict very well the trends or patterns in the training dataset, but won't be as accurate in predicting unseen datasets. The model will be too specific and tailored to the training dataset, in other words.\n",
+    "   * Underfitting is when a model is now too simple to predict based on the training dataset. The model won't pick up on the important nuances and trends of the training dataset, and won't be able to predict as well on unseen datasets due to an insensitivity to these patterns. The model will be too general and won't predict as accurately as it could.\n",
+    "\n",
     "5. Why does splitting the data into training and testing sets, and choosing $k$ by evaluating accuracy or SSE on the test set, improve model performance?\n",
-    "6. With classification, we can report a class label as a prediction or a probability distribution over class labels. Please explain the strengths and weaknesses of each approach."
+    "   * Choosing the right k value, which is the split between which values are reserved for the training vs testing datasets, is imperative in ensuring a top-performing model (\"just right\"). We want the SSE to be as small as possible on the test set to indicate that the model can predict well enough on new data. By splitting the data into two sets, we can see if the model performs similarly on unseen points following the same trends. Then, we'd be able to see that the model is not overfitting nor underfitting and would most likely predict as accurately as possible on other datasets.\n",
+    "\n",
+    "6. With classification, we can report a class label as a prediction or a probability distribution over class labels. Please explain the strengths and weaknesses of each approach.\n",
+    "   * strengths of reporting a class label as a prediction: Good at making certain decisions based on data, providing a clear and direct result to the user. Choosing one label might be easier and faster for the computer to compute, as it's only keeping track of one path in a classification.\n",
+    "   * weaknesses of reporting a class label as a prediction: Eliminates uncertainty, which means it ignores cases where there is an almost equal chance of choosing other labels, potentially leading to misclassification.\n",
+    "   * strengths of reporting a probability distribution over class labels: Doesn't eliminate uncertainty, allowing the model to express confidence in multiple labels rather than forcing a single choice.\n",
+    "   * weaknesses of reporting a probability distribution over class labels: Not always good for making certain decisions based on data, as probability values require additional interpretation or threshold setting before taking action. This is especially unfavorable in decision trees. They might also be more difficult for humans to interpret, as 45% looks close to 50%, but that's a huge difference in large numbers."
    ]
   },
   {
